--- a/index.html
+++ b/index.html
@@ -21,7 +21,6 @@
 		<li class="item"><a href="coding.html">coding</a></li>
 		<li class="item"><a href="video-editing.html">video editing</a></li>
 		<li class="item"><a href="fiberwork.html">fiber work</a></li>
-		<li class="item"><a href="about.html">about</a></li>
 	</ul>
 </nav>
 
@@ -30,9 +29,49 @@
    -------------------------------------------------------------------------->
 
 <section class="welcome">
-	<h1>GABRIELLE DAVIDSON<h1>
+  <h1>GABRIELLE DAVIDSON</h1>
 	 <p>Web Developer. Video Editor. Fiber Artist.</p>
 	 <p>High school senior based in Queens, New York.</p>
 </section>
+  
+<! --------------------------------------------------------------------------
+                                   HEADER                                  
+   -------------------------------------------------------------------------->
+<section class="bio">
+<h1>
+	ABOUT
+</h1>
+
+<img src="self-photo.jpg" alt="Gabrielle">
+
+<! --------------------------------------------------------------------------
+                                    BIO                                   
+   -------------------------------------------------------------------------->
+	<p>
+	Gabrielle is a New York City-based Web Development student. She is currently a senior at Thomas A. Edison CTE High School located in Jamaica, NY.
+	</p>
+
+	<! ------------------------------ video editing exp ------------------------------>
+	<p>
+		Gabrielle has been working with computers since 2013. Originally being introduced to the world of video editing through Sony Vegas Pro, she discovered that she had a passion. On her own, Gabrielle expanded her experience within videography through Adobe After Effects. In 2019, she had learned how to work with Photoshop and Illustrator through her CTE school's design program.
+	</p>
+
+	<! ------------------------------ coding exp ------------------------------>
+	<p>
+		In the summer of 2020, Gabrielle had partaken in Girls Who Code's internship. This program allowed her to discover the world of coding and realize how much she enjoyed it. Within her junior year, Gabrielle applied her background knowledge in school and learned Python. Senior year, Gabrielle had learned JavaScript in school and decided that she wanted to do this for a living. 
+	</p>
+
+	<! ------------------------------ fiber work exp ------------------------------>
+	<p>
+		Gabrielle is an open-minded individual who enjoys learning and expanding her skill-set. In her free time, she knits and crochets as a hobby. Gabrielle has created hats, bags, gloves, and more. She hopes to start selling made-to-order items through her own business.
+	</p>	
+	<! ------------------------------ skills ------------------------------>
+	<h1>
+		Skills
+	</h1>
+	<p>
+		UI Design/Collaboration/Communication/Creativity/Problem-Solving/Patience/Emotional-Intelligence/HTML and CSS/JavaScript/Python/After Effects/Sony Vegas/Graphic Design
+	</p>
+  </section>
 </body>
 </html>
